# mcp-binance-rs

./: .env.test.example  .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_DESKTOP_SETUP.md  Cargo.toml  README.md  Shuttle.toml
.specify/memory/: constitution.md
benches/: performance.rs
docs/: CLAUDE_DESKTOP_SETUP.md  DEVELOPMENT.md  IMPROVEMENTS.md
scripts/: test_quickstart.sh
specs/001-mcp-server-foundation/: VALIDATION.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mcp-server-foundation/checklists/: requirements.md
specs/001-mcp-server-foundation/contracts/: get_server_time.json  mcp_lifecycle.json
specs/003-specify-scripts-bash/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-specify-scripts-bash/checklists/: requirements.md
specs/003-specify-scripts-bash/contracts/: openapi.yaml  websocket-streams.md
specs/004-specify-scripts-bash/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-specify-scripts-bash/checklists/: requirements.md
specs/004-specify-scripts-bash/contracts/: performance-benchmark-schema.json  test-fixture-examples.json  test-result-schema.json
specs/006-prompts-resources-errors/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-prompts-resources-errors/checklists/: requirements.md
specs/006-prompts-resources-errors/contracts/: errors.md  prompts.md  prompts_analytics.md  resources.md
specs/007-orderbook-depth-tools/: VALIDATION.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-orderbook-depth-tools/checklists/: requirements.md
specs/007-orderbook-depth-tools/contracts/: get_orderbook_depth.json  get_orderbook_health.json  get_orderbook_metrics.json
specs/008-orderbook-advanced-analytics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-orderbook-advanced-analytics/checklists/: requirements.md
specs/008-orderbook-advanced-analytics/contracts/: detect_market_anomalies.json  get_liquidity_vacuums.json  get_microstructure_health.json  get_order_flow.json  get_volume_profile.json
specs/009-specify-scripts-bash/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-specify-scripts-bash/checklists/: requirements.md
specs/009-specify-scripts-bash/contracts/: sse_endpoints.json
specs/010-specify-scripts-bash/: IMPLEMENTATION.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-specify-scripts-bash/checklists/: requirements.md
specs/010-specify-scripts-bash/contracts/: http-endpoints.md
specs/011-mainnet-api-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-mainnet-api-auth/checklists/: requirements.md
specs/011-mainnet-api-auth/contracts/: configure_credentials.json  get_credentials_status.json  revoke_credentials.json
src/: error.rs  lib.rs  main.rs  types.rs
src/binance/: client.rs  mod.rs  types.rs  websocket.rs
src/config/: http.rs  mod.rs
src/http/: mod.rs
src/http/middleware/: auth.rs  cors.rs  mod.rs  rate_limit.rs
src/http/routes/: account.rs  market_data.rs  mod.rs  orders.rs
src/http/websocket/: depth.rs  mod.rs  ticker.rs  user_data.rs
src/orderbook/: metrics.rs  rate_limiter.rs  websocket.rs
src/orderbook/analytics/: anomaly.rs  flow.rs  health.rs  mod.rs  profile.rs  tools.rs  trade_stream.rs  types.rs
src/orderbook/analytics/storage/: mod.rs  query.rs  snapshot.rs
src/server/: handler.rs  mod.rs  resources.rs  tool_router.rs  types.rs
src/tools/: chatgpt.rs  credentials.rs  get_server_time.rs  mod.rs
src/transport/: mod.rs  stdio.rs
src/transport/sse/: handlers.rs  handlers_simple.rs  mod.rs  server.rs  session.rs  types.rs
tests/: README.md  orderbook_manager.rs  orderbook_types.rs  performance_orderbook.rs  unit_tests.rs
tests/common/: assertions.rs  binance_client.rs  fixtures.rs  mod.rs
tests/integration/: error_handling.rs  mcp_lifecycle.rs  mod.rs  performance.rs  security.rs  security_extended.rs  server_time.rs  sse_transport_test.rs
tests/integration/orderbook/: metrics.rs  mod.rs  rate_limit.rs  websocket_reconnection.rs
tests/integration/rest_api/: account.rs  market_data.rs  mod.rs  orders.rs
tests/integration/websocket/: mod.rs  streams.rs
