[package]
name = "mcp-binance-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
authors = ["Tradeforge Team"]
license = "MIT"
description = "MCP server for Binance API integration"
repository = "https://github.com/tradeforge/mcp-binance-rs"
keywords = ["mcp", "binance", "trading", "api", "server"]
categories = ["api-bindings", "command-line-utilities"]

[[bin]]
name = "mcp-binance-server"
path = "src/main.rs"

[lib]
name = "mcp_binance_server"
path = "src/lib.rs"

[dependencies]
# MCP Server SDK - Official Rust implementation
# Provides ServerHandler trait, tool macros, stdio transport
rmcp = { version = "0.8.1", features = ["server", "macros", "transport-io"] }

# Async runtime - Required by rmcp, industry standard
tokio = { version = "1.48", features = ["full"] }

# HTTP client - For Binance API calls
# Features: json (auto serialize/deserialize), rustls-tls (TLS support)
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }

# Serialization - Required for JSON handling
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# JSON Schema generation - Auto-generates schemas for tool parameters
# Used by rmcp macros for MCP protocol compliance
schemars = { version = "1.0.4", features = ["chrono04"] }

# Error handling - Ergonomic error types with context
thiserror = "2.0.17"
anyhow = "1.0"

# Logging - Structured logging for debugging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# Cryptography - For token hashing and request signing
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

# HTTP Server - axum web framework (optional feature)
axum = { version = "0.8.6", optional = true }

# WebSocket Client - tokio-tungstenite for Binance streams (optional feature)
tokio-tungstenite = { version = "0.28.0", optional = true }

# Middleware - tower ecosystem for rate limiting, CORS, tracing
tower = { version = "0.5.2", optional = true, features = ["limit", "buffer"] }
tower-http = { version = "0.6.2", optional = true, features = ["trace", "cors", "catch-panic"] }
governor = { version = "0.6", optional = true }

[features]
default = []
http-api = ["axum", "tower", "tower-http", "governor"]
websocket = ["tokio-tungstenite"]

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[[bench]]
name = "performance"
path = "benches/performance.rs"
harness = false

[profile.dev]
opt-level = 0
debug = true
